Responsive images demo, fixed homepage

--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@ link: index
                 <h3 class="paragraphheader" id="Planets">Planets</h3>
                 <div class="imgwrapper">
                     <div class="captionbox center">
-                        <img class="articleimage clip" src="../assets/images/planets/mercury.jpg" alt="Mercury">
+                        <img class="articleimage clip" src="assets/images/planets/mercury.jpg" alt="Mercury">
                         <p class="featuredbutton"><a class="navlink" href="pages/mercury.html">Mercury</a></p>
                     </div>
                     <div class="captionbox center">
-                        <img class="articleimage clip" src="../assets/images/planets/venus.jpg" alt="venus">
+                        <img class="articleimage clip" src="assets/images/planets/venus.jpg" alt="venus">
                         <p class="featuredbutton"><a class="navlink" href="pages/venus.html">Venus</a></p>
                     </div>
                     <div class="captionbox center">
-                        <img class="articleimage clip" src="../assets/images/planets/earth.jpg" alt="Earth">
+                        <img class="articleimage clip" src="assets/images/planets/earth.jpg" alt="Earth">
                         <p class="featuredbutton"><a class="navlink" href="pages/earth.html">Earth</a></p>
                     </div>
                     <div class="captionbox center">
-                        <img class="articleimage clip" src="../assets/images/planets/mars.jpg" alt="Mars">
+                        <img class="articleimage clip" src="assets/images/planets/mars.jpg" alt="Mars">
                         <p class="featuredbutton"><a class="navlink" href="pages/mars.html">Mars</a></p>
                     </div>
                     <div class="captionbox center">
-                        <img class="articleimage clip" src="../assets/images/planets/jupiter.jpg" alt="Jupiter">
+                        <img class="articleimage clip" src="assets/images/planets/jupiter.jpg" alt="Jupiter">
                         <p class="featuredbutton"><a class="navlink" href="pages/jupiter.html">Jupiter</a></p>
                     </div>
                     <div class="captionbox center">
-                        <img class="articleimage clip" src="../assets/images/planets/saturn.jpg" alt="Saturn">
+                        <img class="articleimage clip" src="assets/images/planets/saturn.jpg" alt="Saturn">
                         <p class="featuredbutton"><a class="navlink" href="pages/saturn.html">Saturn</a></p>
                     </div>
                     <div class="captionbox center">
-                        <img class="articleimage clip" src="../assets/images/planets/uranus.jpg" alt="Uranus">
+                        <img class="articleimage clip" src="assets/images/planets/uranus.jpg" alt="Uranus">
                         <p class="featuredbutton"><a class="navlink" href="pages/uranus.html">Uranus</a></p>
                     </div>
                     <div class="captionbox center">
-                        <img class="articleimage clip" src="../assets/images/planets/neptune.jpg" alt="Neptune">
+                        <img class="articleimage clip" src="assets/images/planets/neptune.jpg" alt="Neptune">
                         <p class="featuredbutton"><a class="navlink" href="pages/neptune.html">Neptune</a></p>
                     </div>
