--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -82,8 +82,8 @@ link: asteroid-belt
                     </table>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="245" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres">
                         <p class="caption">Ceres</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Ceres">Ceres</h3>
@@ -97,8 +97,8 @@ link: asteroid-belt
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/asteroids/vesta.jpg" alt="Vesta" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/asteroids/vesta.jpg" alt="Vesta">
                         <p class="caption">Vesta</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Vesta">Vesta</h3>
@@ -111,21 +111,33 @@ link: asteroid-belt
                         A recognisable feature is the Rheasilva crater, which has left a mountain that is almost as tall as Olympus Mons on Mars.
                     </p>
                 </div>
-                <h3 class="paragraphsubheader" id="Pallas">Pallas</h3>
-                <p class="paragraph">
-                    Pallas is the third biggest asteroid in the asteroid belt and the second to be discovered after Ceres.
-                    It is named after another name for Athens, the Greek goddess of war.
-                    It has a high inclination of 34.8°.
-                    Just like Vesta, it is almost round.
-                    So far, it hasn't been visited by a probe.
-                </p>
-                <h3 class="paragraphsubheader" id="Hygiea">Hygiea</h3>
-                <p class="paragraph">
-                    Hygiea is the fourth biggest asteroid in the asteroid belt.
-                    It is named after the Greek goddess of health and medicine.
-                    Just like Vesta and Pallas, it is almost round.
-                    So far, it hasn't been visited by a probe.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/asteroids/pallas.png" alt="Pallas">
+                        <p class="caption">Pallas. <a href="https://commons.wikimedia.org/wiki/File:Potw1749a_Pallas_crop.png">Source</a></p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="Pallas">Pallas</h3>
+                    <p class="paragraph">
+                        Pallas is the third biggest asteroid in the asteroid belt and the second to be discovered after Ceres.
+                        It is named after another name for Athens, the Greek goddess of war.
+                        It has a high inclination of 34.8°.
+                        Just like Vesta, it is almost round.
+                        So far, it hasn't been visited by a probe.
+                    </p>
+                </div>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/asteroids/hygiea.jpg" alt="Hygiea">
+                        <p class="caption">Hygiea. <a href="https://commons.wikimedia.org/wiki/File:SPHERE_image_of_Hygiea.jpg">Source</a></p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="Hygiea">Hygiea</h3>
+                    <p class="paragraph">
+                        Hygiea is the fourth biggest asteroid in the asteroid belt.
+                        It is named after the Greek goddess of health and medicine.
+                        Just like Vesta and Pallas, it is almost round.
+                        So far, it hasn't been visited by a probe.
+                    </p>
+                </div>
                 <h2 id="ExternalLinks">External links</h2>
                 <ul>
                     <li>
