--- a/pages/asteroid.html
+++ b/pages/asteroid.html
@@ -6,8 +6,8 @@ link: asteroid
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/diagrams/asteroids-around-the-sun.png" alt="Location of asteroids" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/diagrams/asteroids-around-the-sun.png" alt="Location of asteroids">
                         <p class="caption">Location of asteroids in the Solar System. Red - trojans; brown - Hildas; pink, beige, orange - asteroid belt; green - near-Earth asteroids. <a href="https://commons.wikimedia.org/wiki/File:Inner_solar_system_objects_top_view_for_wiki.png">Source</a></p>
                     </div>
                 <p class="paragraph">
@@ -51,8 +51,8 @@ link: asteroid
                 </p>
                 <h2 class="paragraphheader" id="AsteroidPopulations">Asteroid populations</h2>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:247px">
-                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="245" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres">
                         <p class="caption">Ceres, the largest asteroid in the asteroid belt</p>
                     </div>
                     <p class="paragraph">
@@ -100,8 +100,8 @@ link: asteroid
                     Of the inner planets, <a href="venus.html">Venus</a> has 1 known trojan, Earth has 2, and Mars has 15.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:220px">
-                        <img class="articleimage" src="../assets/images/asteroids/eros.jpg" alt="Eros" width="218" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/asteroids/eros.jpg" alt="Eros">
                         <p class="caption">Eros, a well-studied near-Earth asteroid</p>
                     </div>
                     <h3 class="paragraphsubheader" id="NearEarthAsteroids">Near-Earth asteroids</h3>
