--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -195,8 +195,8 @@ link: dwarf-planet
                 </div>
                 <h2 class="paragraphheader" id="OfficiallyRecognisedDwarfPlanets">Officially recognised dwarf planets</h2>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto" width="180" height="180">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto">
                         <p class="caption">Pluto</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Pluto">Pluto</h3>
@@ -211,8 +211,8 @@ link: dwarf-planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/tnos/eris.jpg" alt="Eris" width="180" height="180">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/tnos/eris.jpg" alt="Eris">
                         <p class="caption">Eris</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Eris">Eris</h3>
@@ -228,8 +228,8 @@ link: dwarf-planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/tnos/haumea.png" alt="Haumea" width="180" height="180">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/tnos/haumea.png" alt="Haumea">
                         <p class="caption">Haumea</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Haumea">Haumea</h3>
@@ -243,8 +243,8 @@ link: dwarf-planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/tnos/makemake.jpg" alt="Makemake" width="180" height="180">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/tnos/makemake.jpg" alt="Makemake">
                         <p class="caption">Makemake</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Makemake">Makemake</h3>
@@ -257,8 +257,8 @@ link: dwarf-planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="183.75" height="180">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres">
                         <p class="caption">Ceres</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Ceres">Ceres</h3>
