--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -26,8 +26,8 @@ link: natural-satellite
                 </p>
                 <h2 class="paragraphheader" id="SatellitesOfPlanets">Satellites of planets</h2>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="Moon" width="253" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="The Moon">
                         <p class="caption">The Moon</p>
                     </div>
                     <h3 class="paragraphsubheader" id="TheMoon">The Moon</h3>
@@ -49,11 +49,11 @@ link: natural-satellite
                         Both are small irregularly-shaped bodies and it is believed that they originated from the <a href="asteroid-belt.html">Asteroid Belt</a>.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos">
                         </div>
                         <p class="caption">Phobos and Deimos are irregularly-shaped satellites of Mars</p>
                     </div>
@@ -68,17 +68,17 @@ link: natural-satellite
                         Io, Europa and Ganymede are in a 4:2:1 orbital resonance with each other.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto" width="174" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa">
                         </div>
                         <p class="caption">The four Galilean moons - Ganymede, Callisto, Io and Europa</p>
                     </div>
@@ -104,8 +104,8 @@ link: natural-satellite
                     Irregular moons were named after Celtic and Inuit gods and Norse ice giants (except Phoebe).
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan">
                         <p class="caption">Titan</p>
                     </div>
                     <p class="paragraph">
@@ -119,23 +119,23 @@ link: natural-satellite
                         Other round moons are <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea" width="120.5" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus" width="118" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas">
                         </div>
                         <p class="caption">Rhea, Iapetus, Dione, Tethys, Enceladus and Mimas.</p>
                     </div>
@@ -153,27 +153,27 @@ link: natural-satellite
                         The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/oberon.jpg" alt="Oberon" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/oberon.jpg" alt="Oberon">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/umbriel.jpg" alt="Umbriel" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/umbriel.jpg" alt="Umbriel">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/ariel.jpg" alt="Ariel" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/ariel.jpg" alt="Ariel">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/miranda.jpg" alt="Miranda" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/miranda.jpg" alt="Miranda">
                         </div>
                             <p class="caption">Titania, Oberon, Umbriel, Ariel and Miranda</p>
                     </div>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton">
                         <p class="caption">Triton</p>
                     </div>
                     <h3 class="paragraphsubheader" id="SatellitesOfNeptune">Satellites of Neptune</h3>
@@ -187,9 +187,9 @@ link: natural-satellite
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/charon.jpg" alt="Charon" width="240" height="240">
-                        <p class="caption">Charon</p>
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/charon.jpg" alt="Charon">
+                        <p class="caption">Charon, the largest natural satellite of a dwarf planet</p>
                     </div>
                     <h2 class="paragraphheader" id="SatellitesOfDwarfPlanets">Satellites of dwarf planets</h2>
                     <p class="paragraph">
