--- a/pages/planet.html
+++ b/pages/planet.html
@@ -55,8 +55,8 @@ link: planet
                 </p>
                 <h2 class="paragraphheader" id="PlanetsOfTheSolarSystem">Planets of the Solar System</h2>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury" width="242" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury">
                         <p class="caption">Mercury</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Mercury">Mercury</h3>
@@ -69,8 +69,8 @@ link: planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus">
                         <p class="caption">Venus</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Venus">Venus</h3>
@@ -84,8 +84,8 @@ link: planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth">
                         <p class="caption">Earth</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Earth">Earth</h3>
@@ -97,8 +97,8 @@ link: planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars">
                         <p class="caption">Mars</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Mars">Mars</h3>
@@ -114,8 +114,8 @@ link: planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter">
                         <p class="caption">Jupiter</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Jupiter">Jupiter</h3>
@@ -124,13 +124,13 @@ link: planet
                         The largest planet in the Solar System, Jupiter is a gas giant like Saturn. 
                         It bears the name of the king of gods and god of the sky in Roman mythology. 
                         The most recognisable feature is the storm, known as Great Red Spot. 
-                        It has a faint ring and at least <a href="satellites-of-jupiter.html">80 moons</a>, the four main ones being <a href="ganymede.html">Ganymede</a>, <a href="callisto.html">Callisto</a>, <a href="io.html">Io</a>, and <a href="europa.html">Europa</a>. 
+                        It has a faint ring and at least <a href="satellites-of-jupiter.html">97 moons</a>, the four main ones being <a href="ganymede.html">Ganymede</a>, <a href="callisto.html">Callisto</a>, <a href="io.html">Io</a>, and <a href="europa.html">Europa</a>. 
                         Ganymede is also the biggest satellite in the Solar System, bigger than the planet Mercury.
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn" width="320" height="164">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn">
                         <p class="caption">Saturn</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Saturn">Saturn</h3>
@@ -140,13 +140,13 @@ link: planet
                         In Roman mythology, Saturn is the god of time and wealth. 
                         Saturn is known for it's prominent rings. 
                         It is visibly flattened at the poles and features a hexagonal cloud at the north pole. 
-                        <a href="satellites-of-saturn.html">83 known satellites</a> exist, 53 of them are named. 
+                        <a href="satellites-of-saturn.html">274 known satellites</a> exist, 53 of them are named. 
                         The biggest of those moons are <a href="titan.html">Titan</a> (which is bigger than Mercury), <a href="rhea.html">Rhea</a>, <a href="iapetus.html">Iapetus</a>, <a href="dione.html">Dione</a>, <a href="tethys.html">Tethys</a>, <a href="enceladus.html">Enceladus</a>, and <a href="mimas.html">Mimas</a>.
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus">
                         <p class="caption">Uranus</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Uranus">Uranus</h3>
@@ -158,13 +158,13 @@ link: planet
                         Uranus, just like the other ice giant Neptune, consists of volatiles (ices), whereas the gas giants are mostly made up of hydrogen and helium. 
                         Just like the other giants, Uranus has a ring system. 
                         Its axis of rotation is tilted sideways, nearly into the plane of its solar orbit. 
-                        <a href="satellites-of-uranus.html">27 moons</a> are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
+                        <a href="satellites-of-uranus.html">29 moons</a> are known to exist, all named after characters from plays by Shakespeare and "The Rape of the Lock" by Alexander Pope. 
                         The biggest five are <a href="titania.html">Titania</a>, <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and <a href="miranda.html">Miranda</a>.
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune">
                         <p class="caption">Neptune</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Neptune">Neptune</h3>
@@ -173,14 +173,14 @@ link: planet
                         The smallest giant, Neptune is the last planet in the Solar System. 
                         It is named after the Roman sea god. 
                         It has a ring system and had a Great Dark Spot, similar to the Great Red Spot of Jupiter. 
-                        There are <a href="satellites-of-neptune.html">14 known satellites</a>, named after Greek water deities. 
+                        There are <a href="satellites-of-neptune.html">16 known satellites</a>, named after Greek water deities. 
                         The biggest satellite - <a href="triton.html">Triton</a>, is believed to be a <a href="dwarf-planet.html">dwarf planet</a> caught by the gravity of Neptune.
                     </p>
                 </div>
                 <div class="articlediv">
                     <h2 class="paragraphheader" id="DwarfPlanets">Dwarf planets</h2>
-                    <div class="captionbox right" style="width:182px;">
-                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto">
                         <p class="caption">Pluto is regarded as a dwarf planet.</p>
                     </div>
                     <p class="readmore">Main article: <a href="dwarf-planet.html">Dwarf planet</a></p>
