--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -11,7 +11,7 @@ link: solar-system
                         It formed about 4.6 billion years ago with the collapse of a dense region of a molecular cloud, which created the Sun and a protoplanetary disc that eventually formed the orbiting bodies. 
                         The system features eight known <a href="planet.html">planets</a> that orbit the Sun. 
                         The closest four ones - <a href="mercury.html">Mercury</a>, <a href="venus.html">Venus</a>, <a href="earth.html">Earth</a>, and <a href="mars.html">Mars</a> - are smaller in size and consist mostly of solid materials like rocks and metals, while the outer four - <a href="jupiter.html">Jupiter</a>, <a href="saturn.html">Saturn</a>, <a href="uranus.html">Uranus</a>, and <a href="neptune.html">Neptune</a> - are much bigger in size and are mostly made of hydrogen, helium, or include other compounds that are refered to as volatiles.
-                        Apart from planets, the Solar System includes many smaller bodies like <a href="natural-satellite.html">natural satellites</a>, <a href="asteroid.html">asteroids</a>, <a href="comet.html">comets</a>, <a href="centaur.html">centaurs</a> and meteoroids.
+                        Apart from planets, the Solar System includes many smaller bodies like <a href="natural-satellite.html">natural satellites</a>, <a href="asteroid.html">asteroids</a>, <a href="comet.html">comets</a>, <a href="centaur.html">centaurs</a>, <a href="tno.html">trans-Neptunian objects</a>, and meteoroids.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Formation">Formation</h2>
@@ -37,8 +37,8 @@ link: solar-system
                 </p>
                 <div class="articlediv">
                 <h3 class="paragraphheader" id="Sun">Sun</h3>
-                    <div class="captionbox right" style="width:182px">
-                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="180" height="180">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun">
                         <p class="caption">The Sun is the star of the Solar System</p>
                     </div>
                     <p class="readmore">Main article: <a href="sun.html">Sun</a></p>
@@ -62,17 +62,17 @@ link: solar-system
                         Mars, the “Red Planet,” is cold and dry, with evidence of past water activity.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/planets/mercury.jpg" alt="Mercury">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars">
                         </div>
                         <p class="caption">Mercury, Venus, Earth, Mars</p>
                     </div>
@@ -82,8 +82,8 @@ link: solar-system
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:182px">
-                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres">
                         <p class="caption">Ceres is the largest asteroid</p>
                     </div>
                     <h3 class="paragraphheader" id="AsteroidBelt">Asteroid belt</h3>
@@ -108,37 +108,40 @@ link: solar-system
                         There are also other major groups that orbit near the outer planets - Hilda asteroids around Jupiter, the <a href="trojan.html">trojans</a> of Jupiter, and centaurs.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/planets/jupiter.jpg" alt="Jupiter">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn" width="320" height="164">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/planets/uranus.jpg" alt="Uranus">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/planets/neptune.jpg" alt="Neptune">
                         </div>
                         <p class="caption">Jupiter, Saturn, Uranus, Neptune</p>
                     </div>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:182px">
-                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto">
                         <p class="caption">Pluto is the largest trans-Neptunian object</p>
                     </div>
                     <h3 class="paragraphheader" id="TransNeptunianRegions">Trans Neptunian regions</h3>
                     <p class="readmore">Main article: <a href="tno.html">Trans-Neptunian object</a></p>
                     <p class="paragraph">
                         Beyond Neptune’s orbit lie numerous bodies known as trans-Neptunian objects.
-                        The Kuiper Belt comprises the most known TNOs, including Pluto, Haumea, and Makemake.
-                        Other regions incluse the scattered disc - TNOs with greater inclination than those of the Kuiper belt - and extreme TNOS, which have very distant and highly eccentric orbits.
-                        The biggest members of these two groups are Eris and Sedna respectively.
+                        The Kuiper Belt comprises the most known TNOs, including <a href="pluto.html">Pluto</a>, <a href="haumea.html">Haumea</a>, and <a href="makemake.html">Makemake</a>.
+                        Other regions incluse the scattered disc (TNOs with greater inclination than those of the Kuiper belt), and extreme TNOs, which have very distant and sometimes highly eccentric orbits.
+                        The biggest members of these two groups are <a href="eris.html">Eris</a> and <a href="sedna.html">Sedna</a> respectively.
                     </p>
                     <p class="paragraph">
                         These trans-Neptunian objects are remnants from the early Solar System and are composed mostly of frozen volatiles like water, ammonia, and methane.
                         Pluto, once considered the ninth planet, is now classified as a dwarf planet and is the largest of the TNOS.
+                    </p>
+                    <p class="paragraph">
+                        There are several known extreme TNOs with highly eccentric orbits, known as sednoids, that suggest a possible ninth planet that have changed their orbits.
                     </p>
                 <h3 class="paragraphheader" id="HeliosphereAndOortCloud">Heliosphere and Oort cloud</h3>
                 </div>
@@ -155,8 +158,8 @@ link: solar-system
                     While not inside the Solar System, the Oort cloud has its origin in the creation of the planets, but were sent into much more distant orbits. 
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:332px">
-                        <img class="articleimage" src="../assets/images/other/halley-1986.jpg" alt="Halley comet in 1986" width="330" height="222">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/other/halley-1986.jpg" alt="Halley comet in 1986">
                         <p class="caption">The Halley comet seen from Earth in 1986.</p>
                     </div>
                     <h3 class="paragraphheader" id="Comets">Comets</h3>
