--- a/pages/tno.html
+++ b/pages/tno.html
@@ -56,9 +56,9 @@ link: tno
                 </div>
                 <h2 class="paragraphheader" id="VisitedTNOs">Visited TNOs</h2>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:244px;">
-                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto" width="120" height="120">
-                        <img class="articleimage" src="../assets/images/natural-satellites/charon.jpg" alt="Charon" width="120" height="120">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto">
+                        <img class="articleimage" src="../assets/images/natural-satellites/charon.jpg" alt="Charon">
                         <p class="caption">Pluto and it's biggest satellite - Charon.</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Pluto">Pluto</h3>
@@ -72,8 +72,8 @@ link: tno
                     <p class="paragraph">Pluto and Charon were visited by New Horizon in 2015.</p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/tnos/arrokoth.png" alt="Arrokoth" width="168" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/tnos/arrokoth.png" alt="Arrokoth">
                         <p class="caption">486958 Arrokoth</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Arrokoth">Arrokoth</h3>
