--- a/pages/star.html
+++ b/pages/star.html
@@ -6,12 +6,13 @@ link: star
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
-                        <p class="caption">The <a href="sun.html">Sun</a>, a G-type star</p>
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun">
+                        <p class="caption">The Sun, a G-type star</p>
                     </div>
                     <p class="paragraph">
-                        A star is a celestial body that consists of plasma held by it's gravity and emits light. 
+                        A star is a celestial body that is massive enough to sustain thermonuclear fusion.
+                        It consists of plasma held by it's gravity and emits light. 
                         The <a href="sun.html">Sun</a> is the closest star to <a href="earth.html">Earth</a>. 
                         There are an estimated 10^22 to 10^24 stars in the universe, but only around 4,000 can be seen with the naked eye.
                     </p>
